--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <!-- Заголовок-->
-    <header>
-       <link rel="stylesheet" href="styles.css">
-       <a href="http://127.0.0.1:3000/d:/wiuck ch/index.html" class="logo"><img src="wiuck.jpg" height="128" width="128"></a>
-       <h2>Wiuck Technology</h2>
-       <nav>
-           <ul>
-               <li><a href="http://127.0.0.1:3000/d:/wiuck ch/news.html">Новости</a></li>
-           </ul>
-       </nav>
-    </header>
+     <header>
+    <link rel="stylesheet" href="styles.css">
+    <a href="https://wiucktech.github.io/technology/" class="logo"><img src="wiuck.jpg" height="128" width="128"></a>
+    <h2>Wiuck Technology</h2>
+    <nav>
+        <ul>
+            <li><a href="https://wiucktech.github.io/newspage/">Новости</a></li>
+        </ul>
+    </nav>
+ </header>
    <!-- Лента -->
     <body>
         <div class="wiuck-news">
