--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <nav>
         <ul>
             <li><a href="https://wiucktech.github.io/newspage/">Новости</a></li>
+                <li><a href="https://wiucktech.github.io/technology/"><img src="back.jpg" width="25"></a></li>
         </ul>
     </nav>
  </header>
