--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    <!-- Лента -->
     <body>
          <div class="wiuck-news">
-            <img src="photo_2024-07-25_10-32-19 (2).jpg" width="720">
+            <img src="photo_2024-07-24_17-24-18.jpg" width="720">
             <h2>Nothing анонсировал новый смартфон!
 
 </h2>
@@ -39,8 +39,8 @@
            
         </div>
          <div class="wiuck-news">
-            <img src="photo_2024-07-25_10-32-19 (2).jpg" width="720">
-            <h2>AСмартфон realme Narzo N61 запустится в Индии  29 июля!
+            <img src="photo_2024-07-24_18-30-20.jpg" width="720">
+            <h2>Смартфон realme Narzo N61 запустится в Индии  29 июля!
 </h2>
             <p>Один из дешёвок</p>
             <a href="https://t.me/wiuck_ch/18938">Подробнее...</a>
@@ -48,7 +48,7 @@
         </div>
          
          <div class="wiuck-news">
-            <img src="photo_2024-07-22_22-55-18.jpg" width="720">
+            <img src="photo_2024-07-22_22-55-18(2).jpg" width="720">
             <h2>Apple планирует серьезные обновления для линейки iPhone 17, включая новые размеры, частоту обновления 120 Гц на стандартных моделях, процессор A19 и многое другое.
 </h2>
             <p>Вы бы подождали, чтобы обновиться в следующем году</p>
