--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Заголовок-->
      <header>
     <link rel="stylesheet" href="styles.css">
