--- a/index.html
+++ b/index.html
@@ -76,14 +76,12 @@
                 <h2 class="ft-tittle">Fast links</h2>
                 <ul>
                     <body vlink="white">
-                    <li><a href="https://mail.google.com/mail/u/0/#inbox?compose=CllgCJvkXgdKHwGmBvLTgxFBqhDHWZzDvdFmwWPpcJvhXDQXhRsXCHlXvnJkhGCTCCtWnrbFpdq">Cooperation (Gmail)</a></li>
-        
-                    <li><a href="#">Dzen</a></li>
-                        <li><a href="https://pixeldrain.com/u/XraT8FUj">Tiktok</a></li>
-                        <li><a href="https://www.youtube.com/@WiuckChannel">Youtube</a></li>
-                    <li><a href="https://t.me/exclusive_officall">Developer</a></li>
-                    <li><a href="https://t.me/wiuck_chat">Chat</a></li>
-                    <li><a href="https://t.me/wiuck_ch">Channel</a></li>
+                    <li><a href="https://dzen.ru/id/6692c2929148eb681d8db37e">Dzen</a></li>
+                            <li><a href="https://www.tiktok.com/@wiuck.studio?_t=8oP3Axtzcgp&_r=1">Tiktok</a></li>
+                            <li><a href="https://www.youtube.com/@WiuckChannel">Youtube</a></li>
+                        <li><a href="https://t.me/exclusive_officall">Developer</a></li>
+                        <li><a href="https://t.me/wiuck_chat">Chat</a></li>
+                        <li><a href="https://t.me/wiuck_ch">Channel</a></li>
                 </ul>
             </body>
             </div>
