--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Заголовок-->
      <header>
     <link rel="stylesheet" href="styles.css">
-    <a href="https://wiucktech.github.io/technology/" class="logo"><img src="wiuck.jpg" height="128" width="128"></a>
+    <a href="https://wiucktech.github.io/technology/" class="logo"><img src="photo_2024-07-31_15-33-40.jpg" height="128" width="128"></a>
     <h2>Wiuck Technology</h2>
     <nav>
         <ul>
